--- a/CharityPredictor_working.ipynb
+++ b/CharityPredictor_working.ipynb
@@ -206,7 +206,9 @@
    ],
    "source": [
     "# Determine the number of unique values in each column.\n",
-    "application_df.nunique()"
+    "application_df.nunique()\n",
+    "\n",
+    "### -- Categorical data columns APPLICATION_TYPE and CLASSIFICATION both have more than 10 unique values"
    ]
   },
   {
@@ -244,7 +246,8 @@
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts for binning\n",
-    "application_df['APPLICATION_TYPE'].value_counts()"
+    "appType_vCounts = application_df['APPLICATION_TYPE'].value_counts()\n",
+    "appType_vCounts"
    ]
   },
   {
@@ -275,14 +278,25 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "application_types_to_replace = ['T9', 'T13', 'T12', 'T2', 'T14', 'T25', 'T15', 'T29', 'T17']\n",
+    "appType_cutoff = 500\n",
+    "\n",
+    "appType_vCounts_df = pd.DataFrame(appType_vCounts).reset_index()\n",
+    "appType_vCounts_df.columns = ['application_type', 'value_count']\n",
+    "display(appType_vCounts_df)\n",
+    "\n",
+    "application_types_to_replace = appType_vCounts_df.loc[appType_vCounts_df['value_count']<appType_cutoff, 'application_type'].iloc[0]\n",
+    "print(application_types_to_replace)\n",
+    "\n",
+    "#application_types_to_replace = ['T9', 'T13', 'T12', 'T2', 'T14', 'T25', 'T15', 'T29', 'T17']\n",
+    "\n",
+    "application_df_reduced = application_df.copy()\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
-    "    application_df['APPLICATION_TYPE'] = application_df['APPLICATION_TYPE'].replace(app,\"Other\")\n",
+    "    application_df_reduced['APPLICATION_TYPE'] = application_df_reduced['APPLICATION_TYPE'].replace(app,\"Other\")\n",
     "\n",
     "# Check to make sure binning was successful\n",
-    "application_df['APPLICATION_TYPE'].value_counts()"
+    "application_df_reduced['APPLICATION_TYPE'].value_counts()"
    ]
   },
   {
@@ -314,7 +328,8 @@
    ],
    "source": [
     "# Look at CLASSIFICATION value counts for binning\n",
-    "application_df['CLASSIFICATION'].value_counts()"
+    "appCls_vCounts = application_df_reduced['CLASSIFICATION'].value_counts()\n",
+    "appCls_vCounts"
    ]
   },
   {
@@ -380,7 +395,7 @@
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "application_df['CLASSIFICATION'].value_counts().loc[lambda x : x>1]"
+    "appCls_vCounts.loc[appCls_vCounts >1]"
    ]
   },
   {
@@ -408,12 +423,12 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "appCls_vCounts = application_df['CLASSIFICATION'].value_counts()\n",
     "appCls_vCounts_df = pd.DataFrame(appCls_vCounts).reset_index()\n",
     "appCls_vCounts_df.columns = ['classification', 'value_count']\n",
     "display(appCls_vCounts_df)\n",
     "\n",
     "classifications_to_replace = appCls_vCounts_df.loc[appCls_vCounts_df['value_count']<1000, 'classification'].iloc[0]\n",
+    "print(classifications_to_replace)\n",
     "#for count in appCls_vCounts_df['value_count']:\n",
     "    #if count < 1000:\n",
     "        #if appCls_vCounts_df['classification'] not in classifications_to_replace:\n",
@@ -421,10 +436,10 @@
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
-    "    application_df['CLASSIFICATION'] = application_df['CLASSIFICATION'].replace(cls,\"Other\")\n",
+    "    application_df_reduced['CLASSIFICATION'] = application_df_reduced['CLASSIFICATION'].replace(cls,\"Other\")\n",
     "    \n",
     "# Check to make sure binning was successful\n",
-    "application_df['CLASSIFICATION'].value_counts()"
+    "application_df_reduced['CLASSIFICATION'].value_counts()"
    ]
   },
   {
@@ -434,10 +449,10 @@
    "outputs": [],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "print(application_df.dtypes)\n",
+    "print(application_df_reduced.dtypes)\n",
     "\n",
-    "application_df_n = pd.get_dummies(application_df, prefix=['APPLICATION_TYPE', 'AFFILIATION', 'CLASSIFICATION', 'USE_CASE', 'ORGANIZATION', 'INCOME_AMT', 'SPECIAL_CONSIDERATIONS'], columns=['APPLICATION_TYPE', 'AFFILIATION', 'CLASSIFICATION', 'USE_CASE', 'ORGANIZATION', 'INCOME_AMT', 'SPECIAL_CONSIDERATIONS'])\n",
-    "application_df_n"
+    "application_df_reduced_n = pd.get_dummies(application_df_reduced, prefix=['APPLICATION_TYPE', 'AFFILIATION', 'CLASSIFICATION', 'USE_CASE', 'ORGANIZATION', 'INCOME_AMT', 'SPECIAL_CONSIDERATIONS'], columns=['APPLICATION_TYPE', 'AFFILIATION', 'CLASSIFICATION', 'USE_CASE', 'ORGANIZATION', 'INCOME_AMT', 'SPECIAL_CONSIDERATIONS'])\n",
+    "application_df_reduced_n"
    ]
   },
   {
@@ -447,8 +462,8 @@
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "X = application_df_n.drop(columns=['IS_SUCCESSFUL'])\n",
-    "y = application_df_n['IS_SUCCESSFUL']\n",
+    "X = application_df_reduced_n.drop(columns=['IS_SUCCESSFUL'])\n",
+    "y = application_df_reduced_n['IS_SUCCESSFUL']\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
@@ -509,18 +524,20 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "inputFeatures_n = len(X_train_scaled[0])\n",
+    "hiddenNodes_L1 = 80\n",
+    "hiddenNodes_L2 = 30\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hiddenNodes_L1, activation='relu', input_dim=inputFeatures_n))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hiddenNodes_L2, activation='relu'))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation='sigmoid'))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -543,7 +560,7 @@
    ],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
@@ -760,7 +777,8 @@
    ],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "#cp = tf.keras.callbacks.ModelCheckpoint('Output/weights.h5', save_weights_only=True, periods=5)\n",
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=100) # add callbacks=[cp]??"
    ]
   },
   {
